<resources>
    <string name="app_name" translatable="false">SharedPrefs Editor</string>
    <string name="AppMainActivityTitle">App List</string>
    <string name="BoolType" translatable="false">Boolean</string>
    <string name="StringType" translatable="false">String</string>
    <string name="IntType" translatable="false">Numerical</string>
    <string name="SetType" translatable="false">Set</string>
    <string name="TooLargeContent">It may take a while to display all the settings. There are a lot of characters to display in this file.</string>
    <string name="AllType" translatable="false">Any Type</string>
    <string name="EditAsFile">Edit As File</string>
    <string name="CreateSetting">Create</string>
    <string name="SaveSettings">Save</string>
    <string name="NextStep">Next</string>
    <string name="Cancel">Cancel</string>
    <string name="NothingFound">No files was found</string>
    <string name="PreferenceDecodeFailed">File failed to decode</string>
    <string name="AppsSearch">Find</string>
    <string name="ChangesWasSaved">The changes have been saved</string>
    <string name="CreateNewOption">Create New Setting</string>
    <string name="ChooseNameAndType">Choose a name and type:</string>
    <string name="DeafultValue" translatable="false">DeafultValue</string>
    <string name="VariableName">Variable name</string>
    <string name="NewValue">New value</string>
    <string name="TypeSelectorText">Type:</string>
    <string name="RemoveSetting">Remove this key</string>
    <string name="CreatenewSetting">Create new setting</string>
    <string name="NotAvaiableFor__TYPE__">Not avaiable for</string>
    <string name="ShowSystemApps">Show system apps</string>
    <string name="ShowInstalledApps">Show installed apps</string>
    <string name="AppFilter">Application filter</string>
    <string name="NewUpdateFound">New Update Found</string>
    <string name="DoNotSave">Do not save</string>
    <string name="UnstashedChanges">You have changed and not saved some settings, do you want to save them?</string>
    <string name="UnstashedChangesTitle">Save the settings?</string>
    <string name="PLSSelectSomething">Please select at least one option. Currently running Default Mode</string>
</resources>