<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="@color/Material20"
    android:descendantFocusability="afterDescendants"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".Editor">

    <com.google.android.material.loadingindicator.LoadingIndicator
        android:id="@+id/LoadingIndicator"
        style="@style/Widget.Material3.LoadingIndicator.Contained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PopupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/popup_bg"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:scaleX="1.125"
            android:scaleY="1.125"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info" />

        <TextView
            android:id="@+id/PopupText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/TooLargeContent"
            android:textColor="@color/MaterialAdditional80"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/ClosePopupImage"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/ClosePopupImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/close_popup"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/app_editor_menu"
        tools:visibility="visible" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/listRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/PopupLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SettingsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/xmlRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/PopupLayout">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/XmlFilesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomroundedcard"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-56dp"
            android:backgroundTint="#00000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.25" />

                <ImageView
                    android:id="@+id/blurAnimation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:alpha="0"
                    android:paddingBottom="5dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/info" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/appImg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/EditorAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ellipsize="end"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/Material90"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="AppName" />

        <TextView
            android:id="@+id/EditorAppPackage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="4dp"
            android:singleLine="true"
            android:textColor="@color/Material80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/EditorAppName"
            tools:text="AppPackage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Дополнительная кнопка 1 -->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/EditFullFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:src="@drawable/edit_document"
        android:text="@string/EditAsFile"
        android:visibility="invisible"
        app:icon="@drawable/edit_document"
        app:layout_constraintBottom_toTopOf="@+id/CreateNewSetting"
        app:layout_constraintEnd_toEndOf="@+id/fabMain" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/CreateNewSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:text="@string/CreateSetting"
        android:visibility="invisible"
        app:icon="@drawable/create_setting"
        app:layout_constraintBottom_toTopOf="@+id/SaveFile"
        app:layout_constraintEnd_toEndOf="@+id/EditFullFile" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/SaveFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/SaveSettings"
        android:visibility="invisible"
        app:icon="@drawable/save_icon"
        app:layout_constraintBottom_toTopOf="@+id/fabMain"
        app:layout_constraintEnd_toEndOf="@+id/EditFullFile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:src="@drawable/utils"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/NoFilesWasFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/NothingFound"
        android:textColor="@color/Material70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Дополнительная кнопка 2 -->


</androidx.constraintlayout.widget.ConstraintLayout>